refactor: fix formatting