@@ -1,49 +1,48 @@
 package us.byteb.advent.y20;
 
-import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import org.junit.jupiter.api.Test;
 
 class Day7Test {
 
-  private static final Map<String, Map<String, Integer>> RULES = Map.of(
-      "light red", Map.of(
-          "bright white", 1,
-          "muted yellow", 2
-      ),
-      "dark orange", Map.of(
-          "bright white", 3,
-          "muted yellow", 4
-      ),
-      "bright white", Map.of(
-          "shiny gold", 1
-      ),
-      "muted yellow", Map.of(
-          "shiny gold", 2,
-          "faded blue", 9
-      ),
-      "shiny gold", Map.of(
-          "dark olive", 1,
-          "vibrant plum", 2
-      ),
-      "dark olive", Map.of(
-          "faded blue", 3,
-          "dotted black", 4
-      ),
-      "vibrant plum", Map.of(
-          "faded blue", 5,
-          "dotted black", 6
-      ),
-      "faded blue", Collections.emptyMap(),
-      "dotted black", Collections.emptyMap());
+  private static final Map<String, Map<String, Integer>> RULES =
+      Map.of(
+          "light red",
+              Map.of(
+                  "bright white", 1,
+                  "muted yellow", 2),
+          "dark orange",
+              Map.of(
+                  "bright white", 3,
+                  "muted yellow", 4),
+          "bright white", Map.of("shiny gold", 1),
+          "muted yellow",
+              Map.of(
+                  "shiny gold", 2,
+                  "faded blue", 9),
+          "shiny gold",
+              Map.of(
+                  "dark olive", 1,
+                  "vibrant plum", 2),
+          "dark olive",
+              Map.of(
+                  "faded blue", 3,
+                  "dotted black", 4),
+          "vibrant plum",
+              Map.of(
+                  "faded blue", 5,
+                  "dotted black", 6),
+          "faded blue", Collections.emptyMap(),
+          "dotted black", Collections.emptyMap());
 
   @Test
   void parseExample() {
-    final String input = """
+    final String input =
+        """
         light red bags contain 1 bright white bag, 2 muted yellow bags.
         dark orange bags contain 3 bright white bags, 4 muted yellow bags.
         bright white bags contain 1 shiny gold bag.
@@ -63,14 +62,21 @@ class Day7Test {
 
   @Test
   void solveExamplePart1() {
-    assertEquals(Set.of("bright white", "muted yellow", "dark orange", "light red"),Day7.findAllPossibleContainingBagColor("shiny gold", RULES));
+    assertEquals(
+        Set.of("bright white", "muted yellow", "dark orange", "light red"),
+        Day7.findAllPossibleContainingBagColor("shiny gold", RULES));
   }
 
   @Test
   void solveExamplePart2() {
     assertEquals(32, Day7.findNumBags("shiny gold", RULES));
 
-    assertEquals(126, Day7.findNumBags("shiny gold", Day7.parseRules("""
+    assertEquals(
+        126,
+        Day7.findNumBags(
+            "shiny gold",
+            Day7.parseRules(
+                """
         shiny gold bags contain 2 dark red bags.
         dark red bags contain 2 dark orange bags.
         dark orange bags contain 2 dark yellow bags.
@@ -79,6 +85,5 @@ class Day7Test {
         dark blue bags contain 2 dark violet bags.
         dark violet bags contain no other bags.
         """)));
-
   }
 }
